--- a/WMBUS-reader.yaml
+++ b/WMBUS-reader.yaml
@@ -1,8 +1,8 @@
 esphome:
-  name: WMBUS-reader
+  name: wmbus-reader
   friendly_name: WMBUS-reader
   project:
-    name: WMBUS-reader
+    name: esphome.wmbus_reader
     version: "1.0"
     
 esp32:
@@ -33,19 +33,15 @@ api:
     key: "9p2efbtoh/7izZ93LRVsgSXsL1JAoP07YQeoyATI7IE="
 
 ota:
-  password: "54e284b2a4ecc5af80e3d113461f3fe2"
 
 wifi:
-  ssid: "Woszu"
-  password: "8181818181"
-  manual_ip:
-    static_ip: 192.168.1.205
-    gateway: 192.168.1.1
-    subnet: 255.255.255.0
+  ssid: !secret wifi_ssid
+  password: !secret wifi_password
+  
   # Enable fallback hotspot (captive portal) in case wifi connection fails
   ap:
     ssid: "Test-Esp32 Fallback Hotspot"
-    password: "PrcVMxZFfD8l"
+    password: "12345678"
 
 captive_portal:
 
@@ -60,7 +56,7 @@ wmbus:
 
 sensor:
   - platform: wmbus
-    meter_id: 1095753644
+    meter_id: 0x414FDFAC
     type: izar
     add_prefix: false
     lqi:
@@ -69,16 +65,4 @@ sensor:
       name: "My RSSI"
     total_water_m3:
       name: "My cold water"
-  - platform: wmbus
-    meter_id: 0x414FDFAC
-    type: izar
-    add_prefix: false
-    total_water_m3:
-      name: "Stan licznika wody Izar"
-  - platform: wmbus
-    meter_id: 0x03670576
-    type: apator162
-    key: "00000000000000000000000000000000"
-    add_prefix: false
-    total_water_m3:
-      name: "Stan licznika wody Apator"
+
