--- a/WMBUS-reader.yaml
+++ b/WMBUS-reader.yaml
@@ -1,8 +1,8 @@
 esphome:
-  name: wmbus-reader
-  friendly_name: WMBUS-reader
+  name: wmbus-reader2
+  friendly_name: WMBUS-reader2
   project:
-    name: esphome.wmbus_reader
+    name: esphome.wmbus_reader2
     version: "1.0"
     
 esp32:
