WMBUS-reader.yaml

--- a/WMBUS-reader.yaml
+++ b/WMBUS-reader.yaml
@@ -20,7 +20,7 @@ external_components:
     refresh: 0d
 
 dashboard_import:
-  package_import_url: github://esphome/esphome-project-template/project-template-esp32.yaml@v6
+  package_import_url: github://MariuszWoszczynski/WMBUS-reader/blob/main/WMBUS-reader.yaml
   import_full_config: true
 
 time:
