--- a/WMBUS-reader.yaml
+++ b/WMBUS-reader.yaml
@@ -1,3 +1,7 @@
+dashboard_import:
+  package_import_url: github://MariuszWoszczynski/WMBUS-reader/WMBUS-reader.yaml@main
+  import_full_config: true
+
 substitutions:
   name: "wmbus-reader"
   friendly_name: "wmbus-reader"
@@ -19,10 +23,6 @@ external_components:
     components: [ wmbus ]
     refresh: 0d
     
-dashboard_import:
-  package_import_url: github://MariuszWoszczynski/WMBUS-reader/WMBUS-reader.yaml@main
-  import_full_config: true
-
 time:
  - platform: sntp
    id: time_sntp
@@ -40,10 +40,11 @@ api:
 ota:
 
 wifi:
-  
+  ssid: !secret wifi_ssid
+  password: !secret wifi_password
   # Enable fallback hotspot (captive portal) in case wifi connection fails
   ap:
-    ssid: "Test-Esp32 Fallback Hotspot"
+    ssid: "WMBUS Reader - Fallback Hotspot"
     password: "12345678"
 
 captive_portal:
@@ -62,6 +63,28 @@ sensor:
     meter_id: 0x414FDFAC
     type: izar
     add_prefix: false
+    lqi:
+      name: "My lqi"
+    rssi:
+      name: "My RSSI"
+    total_water_m3:
+      name: "My cold water"
+    last_month_total_water_m3:
+      name: "Last month total water"
+    current_month_total_water_l:
+      name: "Current month toal water"
+    transmit_period_s:
+      name: "Transmit period [s]"
+    remaining_battery_life_y:
+      name: "Remaining battery life [Y]"
+    current_alarms:
+      name: "Current alarms"
+    previous_alarms:
+      name: "Previous alarms"
+  - platform: wmbus
+    meter_id: 0x03670576
+    type: apator162
+    key: "00000000000000000000000000000000"
     lqi:
       name: "My lqi"
     rssi:
