--- a/WMBUS-reader.yaml
+++ b/WMBUS-reader.yaml
@@ -42,6 +42,18 @@ ota:
 wifi:
   ssid: !secret wifi_ssid
   password: !secret wifi_password
+
+#  static IP configuration (instead of data from the secret file)
+
+#  ssid: "MY_WIFI"
+#  password: "0123456789"
+#  reboot_timeout: 10min
+#  manual_ip:
+#    static_ip: 192.168.1.99
+#    gateway: 192.168.1.1
+#    subnet: 255.255.255.0
+
+  
   # Enable fallback hotspot (captive portal) in case wifi connection fails
   ap:
     ssid: "WMBUS Reader - Fallback Hotspot"
@@ -59,6 +71,7 @@ wmbus:
 
 
 sensor:
+# first sensor
   - platform: wmbus
     meter_id: 0x414FDFAC
     type: izar
@@ -81,6 +94,7 @@ sensor:
       name: "Current alarms"
     previous_alarms:
       name: "Previous alarms"
+  # second sensor
   - platform: wmbus
     meter_id: 0x03670576
     type: apator162
@@ -91,3 +105,5 @@ sensor:
       name: "My RSSI"
     total_water_m3:
       name: "My cold water"
+ 
+  # more options on https://github.com/SzczepanLeon/esphome-components
