--- a/WMBUS-reader.yaml
+++ b/WMBUS-reader.yaml
@@ -44,9 +44,10 @@ ota:
 wifi:
   ssid: !secret wifi_ssid
   password: !secret wifi_password
-
+  power_save_mode: none
+  fast_connect: true
+  reboot_timeout: 10min
 #  static IP configuration (instead of data from the secret file)
-
 #  ssid: "MY_WIFI"
 #  password: "0123456789"
 #  reboot_timeout: 10min
@@ -54,7 +55,6 @@ wifi:
 #    static_ip: 192.168.1.99
 #    gateway: 192.168.1.1
 #    subnet: 255.255.255.0
-
   
   # Enable fallback hotspot (captive portal) in case wifi connection fails
   ap:
