--- a/WMBUS-reader.yaml
+++ b/WMBUS-reader.yaml
@@ -83,10 +83,17 @@ wmbus:
   led_pin: GPIO2
   led_blink_time: "1s"
 
-text_sensor: # For Apator16-2 water meter please add also text sensor (for debug purposes):
-  - platform: wmbus
+text_sensor: 
+  - platform: wmbus                       # For Apator16-2 water meter please add also text sensor (for debug purposes):
     name: "Text debug for Apator 16-2"
-    
+  - platform: wifi_info                   #diagnostic info
+    ip_address:
+      name: 'IP Address'
+      icon: mdi:wifi
+    ssid:
+      name: 'Connected SSID'
+      icon: mdi:wifi-strength-2
+      
 sensor:
   - platform: wifi_signal # Reports the WiFi signal strength/RSSI in dB
     name: "WiFi Signal dB"
