--- a/WMBUS-reader.yaml
+++ b/WMBUS-reader.yaml
@@ -60,7 +60,7 @@ wifi:
   # Enable fallback hotspot (captive portal) in case wifi connection fails
   ap:
     ssid: "WMBUS Reader - Fallback Hotspot"
-    password: "password_12345678"
+#    password: "password_12345678"
 
 #your mqtt parameters
 #mqtt:
