--- a/WMBUS-reader.yaml
+++ b/WMBUS-reader.yaml
@@ -1,5 +1,5 @@
 dashboard_import:
-  package_import_url: github://MariuszWoszczynski/WMBUS-reader/WMBUS-reader.yaml@main
+  package_import_url: github://MariuszWoszczynski/WMBUS-reader/WMBUS-reader.yaml@3.2.3
   import_full_config: true
 
 substitutions:
