--- a/WMBUS-reader.yaml
+++ b/WMBUS-reader.yaml
@@ -13,7 +13,7 @@ esphome:
     name: esphome.wmbus_reader
     version: "1.0"
   # only for RPI 
-  compile_process_limit: 1
+#  compile_process_limit: 1
   
 esp32:
   board: nodemcu-32s
@@ -83,14 +83,11 @@ wmbus:
   gdo2_pin: GPIO21
   gdo0_pin: GPIO22
   cs_pin:   GPIO23
-  log_unknown: true
+#  log_unknown: true
   led_pin: GPIO2
   led_blink_time: "1s"
 
 text_sensor: 
-    # For Apator16-2 water meter please add also text sensor (for debug purposes):
-  - platform: wmbus                       
-    name: "Text debug for Apator 16-2"
     #diagnostic info
   - platform: wifi_info                   
     ip_address:
