--- a/WMBUS-reader.yaml
+++ b/WMBUS-reader.yaml
@@ -51,10 +51,13 @@ wifi:
   reboot_timeout: 10min
   output_power: 18dB
 #  static IP configuration (instead of data from the secret file)
-  manual_ip:
-    static_ip: 192.168.10.99
-    gateway: 192.168.10.1
-    subnet: 255.255.255.0
+#  ssid: "MY_WIFI"
+#  password: "0123456789"
+#  reboot_timeout: 10min
+#  manual_ip:
+#    static_ip: 192.168.1.99
+#    gateway: 192.168.1.1
+#    subnet: 255.255.255.0
   
   # Enable fallback hotspot (captive portal) in case wifi connection fails
   ap:
@@ -72,7 +75,8 @@ captive_portal:
 
 web_server: 
   port: 80
-
+  version: 3
+  
 wmbus:
   mosi_pin: GPIO32
   clk_pin:  GPIO33 
@@ -80,6 +84,97 @@ wmbus:
   gdo2_pin: GPIO21
   gdo0_pin: GPIO22
   cs_pin:   GPIO23
-  log_unknown: true
+#  log_unknown: true
   led_pin: GPIO2
   led_blink_time: "1s"
+
+text_sensor: 
+    #diagnostic info
+  - platform: wifi_info                   
+    ip_address:
+      name: 'IP Address'
+      icon: mdi:wifi
+    ssid:
+      name: 'Connected SSID'
+      icon: mdi:wifi-strength-2
+      
+sensor:    ############### The following sensors are examples. Adapt the sensors to the meters you have (according to the instructions) and remove the others.###############
+    # Reports the WiFi signal strength/RSSI in dB
+  - platform: wifi_signal 
+    name: "WiFi Signal dB"
+    id: wifi_signal_db
+    update_interval: 60s
+    entity_category: "diagnostic"
+# first sensor (water)
+  - platform: wmbus
+    meter_id: 0x00000000
+    type: izar
+    add_prefix: false
+    lqi:
+      name: "My lqi"
+    rssi:
+      name: "My RSSI"
+    total_water_m3:
+      name: "My cold water"
+   #  filters:              #optional
+   #    - offset: 123.4567  #the difference between the indications of the radio overlay and the counter (if you have a used overlay)
+    last_month_total_water_m3:
+      name: "Last month total water"
+    current_month_total_water_l:
+      name: "Current month total water"
+    transmit_period_s:
+      name: "Transmit period [s]"
+    remaining_battery_life_y:
+      name: "Remaining battery life [Y]"
+    current_alarms:
+      name: "Current alarms"
+    previous_alarms:
+      name: "Previous alarms"
+  # second sensor (water)
+  - platform: wmbus
+    meter_id: 0x00000000
+    type: apator162
+    add_prefix: false
+    key: "00000000000000000000000000000000"
+    lqi:
+      name: "My lqi"
+    rssi:
+      name: "My RSSI"
+    total_water_m3:
+      name: "My cold water"
+  # third sensor (gas)
+  - platform: wmbus
+    meter_id: 0x00000000
+    type: unismart
+    add_prefix: false
+    key: "00000000000000000000000000000000"
+    lqi:
+      name: "My lqi"
+    rssi:
+      name: "My RSSI"
+    total_gas_m3:
+      name: "My gas"
+  # fourth sensor (electricity)
+  - platform: wmbus
+    meter_id: 0x00000000
+    type: amiplus
+    add_prefix: false
+    mode: T1C1
+    rssi:
+      name: "My RSSI"
+    total_energy_consumption_kwh:
+      name: "My consumption in kWh"
+      icon: "mdi:power-plug"
+    current_power_consumption_kw:
+      name: "My current power consumption in kW"
+    total_energy_production_kwh:
+      name: "My total energy production in kWh"
+    current_power_production_kw:
+      name: "My current power production in kW"
+    voltage_at_phase_1_v:
+      name: "My V1"
+    voltage_at_phase_2_v:
+      name: "My V2"
+    voltage_at_phase_3_v:
+      name: "My V3"
+  # more options on https://github.com/SzczepanLeon/esphome-components
