--- a/WMBUS-reader-v5.yaml
+++ b/WMBUS-reader-v5.yaml
@@ -26,7 +26,20 @@ esp32:
 external_components:
   - source: github://SzczepanLeon/esphome-components@main
 
- 
+
+
+
+#If you are using esphome 2025.12.0, use this external_components configuration: 
+#external_components:
+#  - source: github://SzczepanLeon/esphome-components@main
+#    components:
+#      - socket_transmitter
+#      - wmbus_common
+#      - wmbus_radio
+#      - wmbus_meter
+
+
+      
 mdns:
   disabled: false
   
